various updates in prep for services page

--- a/_sass/components/code.scss
+++ b/_sass/components/code.scss
@@ -1,7 +1,6 @@
 code {
-	padding: 3px 4px;
-	background: $black_light;
-	color: $off_white;
+	padding: 1px 3px;
+	background: $off_white;
 }
 pre {
 	background: $black_light;
