--- a/_sass/modules/siteNavigation.scss
+++ b/_sass/modules/siteNavigation.scss
@@ -65,6 +65,7 @@
 }
 .m-siteNavigation-highlight {
 	color: $blue;
+	font-weight: bold;
 	background: none;
 	.no-touch &:focus,
 	.no-touch &:hover,
