--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -29,6 +29,7 @@
 @import 'modules/input';
 @import 'modules/latestWork';
 @import 'modules/modal';
+@import 'modules/services';
 @import 'modules/siteNavigation';
 @import 'modules/work';
 @import 'modules/animation';
