--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,9 +8,9 @@
 
 	<!-- Social Sharing -->
 	{% if page.description %}
-		<title>{{ page.title }} [{{ site.title }}]</title>
-		<meta name="twitter:title"       content="{{ page.title }} [{{ site.title }}]">
-		<meta property="og:title"        content="{{ page.title }} [{{ site.title }}]">
+		<title>{{ page.title }} — {{ site.title }}</title>
+		<meta name="twitter:title"       content="{{ page.title }} — {{ site.title }}">
+		<meta property="og:title"        content="{{ page.title }} — {{ site.title }}">
 		<meta name="description"         content="{{ page.description }}">
 		<meta name="twitter:description" content="{{ page.description }}">
 		<meta property="og:description"  content="{{ page.description }}">
@@ -26,8 +26,8 @@
 		<meta property="og:type"             content="website">
 		<meta name="twitter:site"            content="{{ site.twitter_username }}">
 		<meta property="og:site_name"        content="Morgan Carter's Portfolio">
-		<meta property="og:url"              content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}/">
-		<link rel="canonical"                href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}/">
+		<meta property="og:url"              content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+		<link rel="canonical"                href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	{% if page.image %}
 		<meta name="twitter:image"         content="{{ site.url }}/assets/images/{{ page.image }}">
 		<meta property="og:image"          content="{{ site.url }}/assets/images/{{ page.image }}">
