--- a/_sass/components/layout.scss
+++ b/_sass/components/layout.scss
@@ -15,16 +15,17 @@
 	margin-top: $line_height * 2em;
 }
 .margin--sm {
-	margin-top: $line_height / 2 * 1em;
+	margin-top: $line_height / 2 * 1em !important;
 }
 .margin--none {
-	margin-top: 0;
+	margin-top: 0 !important;
 }
 .margin-bottom {
 	margin-bottom: $line_height * 1em;
 }
 
 .container,
+.container--md,
 .container--sm,
 .container--xs {
 	margin-left: auto;
@@ -32,6 +33,9 @@
 }
 .container {
 	max-width: 1440px;
+}
+.container--md {
+	max-width: 1280px;
 }
 .container--sm {
 	max-width: 768px;
