--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 			<a class="m-siteNavigation-link {% if page.siteNav == 'work' %}active{% endif %}" href="{{ site.baseurl }}/work/">Work</a>
 		</li>
 		<li>
-			<a class="m-siteNavigation-link {% if page.siteNav == 'about' %}active{% endif %}" href="{{ site.baseurl }}/about/">About</a>
+			<a class="m-siteNavigation-link {% if page.siteNav == 'services' %}active{% endif %}" href="{{ site.baseurl }}/services/">Services</a>
 		</li>
 		<li>
 			<a class="m-siteNavigation-link {% if page.siteNav == 'blog' %}active{% endif %}" href="{{ site.baseurl }}/design-solutions/">Blog</a>
