--- a/_includes/me.html
+++ b/_includes/me.html
@@ -5,6 +5,6 @@
 	</div>
 	<div>
 		<p class="m-heroText-paragraph m-animation-3">I’m a freelance product designer. I turn complex ideas into intuitive, beautiful products.</p>
-		<!-- <a class="btn m-animation-4 js-cta-seeMyWork" href="/work" data-text="See my work"></a> -->
+		<!-- <p class="m-heroText-paragraph m-animation-3">I’m a freelance product designer with a focus on creative problem solving.</p> -->
 	</div>
 </div>
