--- a/_sass/modules/home.scss
+++ b/_sass/modules/home.scss
@@ -4,8 +4,7 @@
 	@include prefix(transform, translateY(-50%));
 	left: 0;
 	right: 30%;
-	padding-top: 0;
-	padding-bottom: 0;
+	padding: 0 $rhythm;
 }
 .m-home-wrapper--invert {
 	display: none;
@@ -62,5 +61,6 @@
 		position: relative;
 		@include prefix(transform, none);
 		margin-top: $rhythm * 2;
+		padding: $rhythm $rhythm/2;
 	}
 }
