include social icons in contact me, make contact me use /contact url on opening modal, various fixes

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -47,6 +47,26 @@
 					<label id="contactForm-error" class="m-input-error u-pullLeft margin--none">Something went wrong!</label>
 				</div>
 			</form>
+
+			<div class="hidden--md-up u-text--center">
+				<em class="m-social-or">or</em>
+			</div>
+
+			<div class="m-social-wrapper margin--sm">
+				<a class="m-social-icon" href="https://twitter.com/morgoe876">
+					<img class="m-social-image" src="/assets/images/contact/twitter.svg">
+				</a>
+				<a class="m-social-icon" href="https://dribbble.com/morgoe">
+					<img class="m-social-image" src="/assets/images/contact/dribbble.svg">
+				</a>
+				<em class="m-social-or hidden--sm">or</em>
+				<a class="m-social-icon m-social-email" href="mailto:hello@morgancarter.com.au">
+					<img class="m-social-image" src="/assets/images/contact/envelope.svg">
+					<span class="m-social-link">
+						hello@morgancarter.com.au
+					</span>
+				</a>
+			</div>
 		</div>
 	</div>
 
