--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -31,6 +31,7 @@
 @import 'modules/modal';
 @import 'modules/services';
 @import 'modules/siteNavigation';
+@import 'modules/social';
 @import 'modules/work';
 @import 'modules/animation';
 
