prep for new blog post

--- a/_sass/general/typography.scss
+++ b/_sass/general/typography.scss
@@ -38,7 +38,7 @@ h4,
 .h4 {
 	font-size: 1.5rem;
 	line-height: $line_height--header;
-	font-weight: bold;
+	font-weight: 600;
 	color: $black;
 }
 h5,
