update font loading, remove ASNTM link, update blog post in prep

--- a/_sass/modules/heroText.scss
+++ b/_sass/modules/heroText.scss
@@ -42,7 +42,10 @@
 	}
 }
 .m-heroText-br {
-	display: none;
+	// display: none;
+}
+.m-heroText-enabled {
+	color: $green_text;
 }
 
 @media (max-width: 1280px) {
