--- a/_sass/general/variables.scss
+++ b/_sass/general/variables.scss
@@ -19,6 +19,8 @@ $blue:              #39b3e5;
 $green:             #56c080;
 $red:               #c05680;
 
+$green_text:        #26a657;
+
 // Inputs
 $blue-inputUnderline: #9bd8f1;
 $blue-inputUnderline--highlight: #c8ecfb;
