add Disqus comments

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,22 @@ body-id: work
 			</section>
 
 			<p class="margin--lg container--sm">If you've got any alternative solutions to this problem, or want to suggest a new problem for me to tackle, please drop me a line at <a href="mailto:{{ site.email }}">{{ site.email }}</a>.</p>
+
+			<div id="disqus_thread" class="container--sm margin--lg"></div>
+			<script>
+				var disqus_config = function () {
+					this.page.url = "{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"; // Replace PAGE_URL with your page's canonical URL variable
+					// this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+				};
+				(function() { // DON'T EDIT BELOW THIS LINE
+					var d = document, s = d.createElement('script');
+
+					s.src = '//morgancarter.disqus.com/embed.js';
+
+					s.setAttribute('data-timestamp', +new Date());
+					(d.head || d.body).appendChild(s);
+				})();
+			</script>
 		{% endif %}
 	</div>
 </div>
