--- a/_sass/base/typography.scss
+++ b/_sass/base/typography.scss
@@ -80,6 +80,9 @@ blockquote {
 	border: 3px solid $blue;
 	@include clearfix();
 }
+.underline {
+	text-decoration: underline;
+}
 
 @media (max-width: 1023px) {
 	html {
