--- a/assets/css/my.scss
+++ b/assets/css/my.scss
@@ -4,12 +4,12 @@
 @charset "utf-8";
 
 
-// General Settings
-@import 'general/variables';
-@import 'general/reset';
-@import 'general/grid';
-@import 'general/mixins';
-@import 'general/typography';
+// Base Settings
+@import 'base/variables';
+@import 'base/reset';
+@import 'base/grid';
+@import 'base/mixins';
+@import 'base/typography';
 
 // Components
 @import 'components/layout';
