got bored, new blue

--- a/_sass/base/variables.scss
+++ b/_sass/base/variables.scss
@@ -14,16 +14,15 @@ $blue_dark:         #005d82;
 $blue_light:        #73c5e6;
 $yellow:            #ffd200;
 
-// $blue:              #3089ED;
-$blue:              #39b3e5;
+$blue:              #3897E5;
 $green:             #56c080;
 $red:               #c05680;
 
 $green_text:        #26a657;
 
 // Inputs
-$blue-inputUnderline: #9bd8f1;
-$blue-inputUnderline--highlight: #c8ecfb;
+$blue-inputUnderline: #9DCBF1;
+$blue-inputUnderline--highlight: #C6E3FB;
 // Rhythm
 
 // Typography
