--- a/_sass/modules/services.scss
+++ b/_sass/modules/services.scss
@@ -2,6 +2,30 @@
 	max-width: 1280px;
 	margin: 0 auto;
 }
+.m-services-about {
+	display: table;
+	margin-left: auto;
+	margin-right: auto;
+	font-weight: 500;
+	margin-top: -$rhythm / 2;
+	font-family: $font-serif;
+	font-style: italic;
+	p {
+		color: $black_lightest;
+		+ p {
+			margin-top: $rhythm;
+		}
+	}
+	em {
+		color: $black;
+		font-style: normal;
+		font-weight: bold;
+	}
+	a {
+		padding: 0 4px;
+		margin: 0 -4px;
+	}
+}
 .m-services-item {
 	position: relative;
 }
@@ -20,6 +44,12 @@
 @media (max-width: 767px) {
 	.m-services {
 		max-width: 480px;
+	}
+	.m-services-about {
+		a {
+			padding: 0 2px;
+			margin: 0 -2px;
+		}
 	}
 	.m-services-item {
 		margin-bottom: 3em;
