new homepage photo

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,8 +32,8 @@
 		<meta name="twitter:image"         content="{{ site.url }}/assets/images/{{ page.image }}">
 		<meta property="og:image"          content="{{ site.url }}/assets/images/{{ page.image }}">
 	{% else %}
-		<meta name="twitter:image"         content="{{ site.url }}/assets/images/home/me_social.png">
-		<meta property="og:image"          content="{{ site.url }}/assets/images/home/me_social.png">
+		<meta name="twitter:image"         content="{{ site.url }}/assets/images/home/me_social.jpg">
+		<meta property="og:image"          content="{{ site.url }}/assets/images/home/me_social.jpg">
 	{% endif %}
 
 	<link rel="stylesheet" href="{{ "/assets/css/my.css" | prepend: site.baseurl }}">
