--- a/_sass/base/variables.scss
+++ b/_sass/base/variables.scss
@@ -14,7 +14,7 @@ $blue_dark:         #005d82;
 $blue_light:        #73c5e6;
 $yellow:            #ffd200;
 
-$blue:              #3897E5;
+$blue:              #1f75ed;
 $green:             #56c080;
 $red:               #c05680;
 
