--- a/_sass/modules/home.scss
+++ b/_sass/modules/home.scss
@@ -11,9 +11,9 @@
 }
 .m-home-me {
 	width: 30%;
-	background-image: url('/assets/images/home/me.png');
+	background-image: url('/assets/images/home/new_me.jpg');
 	background-size: cover;
-	background-position: 23% 40%;
+	background-position: 40% 50%;
 	margin-top: 0;
 	position: absolute;
 	top: 0;
