new font- gordita replaces futura

--- a/_includes/me.html
+++ b/_includes/me.html
@@ -4,7 +4,7 @@
 		<h1 class="m-heroText-title m-animation-2">Morgan Carter</h1>
 	</div>
 	<div>
-		<p class="m-heroText-paragraph m-animation-3">I’m a freelance product designer. I turn complex ideas into intuitive, beautiful products.</p>
+		<p class="m-heroText-paragraph m-animation-3">I’m a freelance digital product designer. I turn complex ideas into intuitive, beautiful products.</p>
 		<!-- <p class="m-heroText-paragraph m-animation-3">I’m a freelance product designer with a focus on creative problem solving.</p> -->
 	</div>
 </div>
