--- a/_sass/base/variables.scss
+++ b/_sass/base/variables.scss
@@ -21,13 +21,13 @@ $red:               #c05680;
 $green_text:        #26a657;
 
 // Inputs
-$blue-inputUnderline: #9DCBF1;
+$blue-inputUnderline: #6da5f3;
 $blue-inputUnderline--highlight: #C6E3FB;
 // Rhythm
 
 // Typography
 $font_body:         "Soleil", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica, Arial;
-$font_header:       "futura-pt", "Futura PT", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica, Arial;
+$font_header:		"gordita", "Soleil", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica, Arial;;
 $font_serif:        "Charter", Georgia, serif;
 $font_size:         18px;
 $line_height:         1.5;
