--- a/_sass/modules/blogPost.scss
+++ b/_sass/modules/blogPost.scss
@@ -24,7 +24,7 @@
 	}
 }
 .m-post-title {
-	font-size: 3rem;
+	font-size: 3.5rem;
 }
 .m-post-quote {
 	padding-left: $rhythm/3;
@@ -47,21 +47,21 @@
 	.no-touch &:focus .btn:after,
 	.no-touch &:hover .btn:after,
 	.touch &:active .btn:after {
-		background: -moz-linear-gradient(bottom,     transparent 0%, transparent 6%, $blue 6%, $blue 12%, transparent 12%, transparent 100%); /* FF3.6+ */
-		background: -webkit-linear-gradient(bottom,  transparent 0%, transparent 6%, $blue 6%, $blue 12%, transparent 12%, transparent 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(bottom,       transparent 0%, transparent 6%, $blue 6%, $blue 12%, transparent 12%, transparent 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(bottom,      transparent 0%, transparent 6%, $blue 6%, $blue 12%, transparent 12%, transparent 100%); /* IE10+ */
-		background: linear-gradient(to top,          transparent 0%, transparent 6%, $blue 6%, $blue 12%, transparent 12%, transparent 100%); /* W3C */
+		background: -moz-linear-gradient(bottom,     transparent 0%, $blue 0%, $blue 10%, transparent 10%, transparent 100%); /* FF3.6+ */
+		background: -webkit-linear-gradient(bottom,  transparent 0%, $blue 0%, $blue 10%, transparent 10%, transparent 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(bottom,       transparent 0%, $blue 0%, $blue 10%, transparent 10%, transparent 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(bottom,      transparent 0%, $blue 0%, $blue 10%, transparent 10%, transparent 100%); /* IE10+ */
+		background: linear-gradient(to top,          transparent 0%, $blue 0%, $blue 10%, transparent 10%, transparent 100%); /* W3C */
 	}
 	&[data-visited] {
 		.btn {
 			color: inherit;
 			&:after {
-				background: -moz-linear-gradient(bottom,     transparent 0%, transparent 6%, rgba($black_light, 0.33) 6%, rgba($black_light, 0.33) 12%, transparent 12%, transparent 100%); /* FF3.6+ */
-				background: -webkit-linear-gradient(bottom,  transparent 0%, transparent 6%, rgba($black_light, 0.33) 6%, rgba($black_light, 0.33) 12%, transparent 12%, transparent 100%); /* Chrome10+,Safari5.1+ */
-				background: -o-linear-gradient(bottom,       transparent 0%, transparent 6%, rgba($black_light, 0.33) 6%, rgba($black_light, 0.33) 12%, transparent 12%, transparent 100%); /* Opera 11.10+ */
-				background: -ms-linear-gradient(bottom,      transparent 0%, transparent 6%, rgba($black_light, 0.33) 6%, rgba($black_light, 0.33) 12%, transparent 12%, transparent 100%); /* IE10+ */
-				background: linear-gradient(to top,          transparent 0%, transparent 6%, rgba($black_light, 0.33) 6%, rgba($black_light, 0.33) 12%, transparent 12%, transparent 100%); /* W3C */
+				background: -moz-linear-gradient(bottom,     transparent 0%, rgba($black_light, 0.33) 0%, rgba($black_light, 0.33) 10%, transparent 10%, transparent 100%); /* FF3.6+ */
+				background: -webkit-linear-gradient(bottom,  transparent 0%, rgba($black_light, 0.33) 0%, rgba($black_light, 0.33) 10%, transparent 10%, transparent 100%); /* Chrome10+,Safari5.1+ */
+				background: -o-linear-gradient(bottom,       transparent 0%, rgba($black_light, 0.33) 0%, rgba($black_light, 0.33) 10%, transparent 10%, transparent 100%); /* Opera 11.10+ */
+				background: -ms-linear-gradient(bottom,      transparent 0%, rgba($black_light, 0.33) 0%, rgba($black_light, 0.33) 10%, transparent 10%, transparent 100%); /* IE10+ */
+				background: linear-gradient(to top,          transparent 0%, rgba($black_light, 0.33) 0%, rgba($black_light, 0.33) 10%, transparent 10%, transparent 100%); /* W3C */
 			}
 		}
 	}
