--- a/_sass/modules/heroText.scss
+++ b/_sass/modules/heroText.scss
@@ -2,7 +2,7 @@
 	margin-top: $rhythm;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 880px;
+	max-width: 780px;
 	> div {
 		display: table-cell;
 		padding-left: $rhythm / 2;
@@ -19,17 +19,18 @@
 .m-heroText-hello {
 	position: absolute;
 	margin-top: -$rhythm;
-	margin-left: $rhythm / 2;
+	margin-left: $rhythm / 4;
 }
 .m-heroText-hello--aLittleBit {
 	margin-left: $rhythm;
 }
 .m-heroText-title {
 	margin-top: 0;
-	text-transform: uppercase;
 	text-align: right;
-	font-size: 5rem;
-	line-height: 4rem;
+	font-size: 4rem;
+	line-height: 4.05rem;
+	position: relative;
+	top: 10px;
 }
 .m-heroText-paragraph {
 	font-size: 1.5rem;
@@ -48,13 +49,6 @@
 	color: $green_text;
 }
 
-@media (max-width: 1280px) {
-	.m-heroText-title {
-		font-size: 4rem;
-		line-height: 3rem;
-	}
-}
-
 @media (max-width: 1023px) {
 	.m-heroText-hero {
 		> div {
@@ -62,8 +56,13 @@
 			margin-top: 0;
 		}
 	}
-	.m-heroText-hello {
-		margin-left: 0.5rem;
+	.m-heroText-hello,
+	.m-heroText-paragraph {
+		margin-left: 0.3rem;
+	}
+	.m-heroText-title {
+		top: 0;
+		margin: 0.5rem 0;
 	}
 	.m-heroText-title,
 	.m-heroText-paragraph {
@@ -88,7 +87,7 @@
 	}
 	.m-heroText-title {
 		font-size: 3rem;
-		line-height: 2.5rem;
+		line-height: 1;
 	}
 	.m-heroText-paragraph {
 		font-size: 1rem;
