--- a/_sass/modules/input.scss
+++ b/_sass/modules/input.scss
@@ -51,10 +51,9 @@ textarea {
     border-radius: 0;
 	background: none;
 	border: none;
-
-	padding: 0 4px 1px;
+	font-weight: 500;
+	padding: 8px 4px 2px;
 	box-shadow: 0 1px 0 transparent;
-	border-bottom: 1px solid $blue-inputUnderline;
 
 	color: white;
 	&:-webkit-autofill {
@@ -64,18 +63,20 @@ textarea {
 }
 textarea {
 	line-height: 1.3;
-	padding-top: 2px;
-	padding-bottom: 3px;
+	padding-top: 7px;
+	padding-bottom: 0;
 }
 .m-input {
+	font-family: $font_header;
 	position: relative;
+	border-bottom: 2px solid $blue-inputUnderline;
 	&:after {
 		content: '';
 		display: block;
 		position: absolute;
 		left: 100%;
 		right: 0;
-		bottom: -1px;
+		bottom: -2px;
 		height: 2px;
 		background: $blue-inputUnderline--highlight;
 	}
@@ -97,7 +98,7 @@ textarea,
 		content: '';
 		display: block;
 		position: absolute;
-		top: 0;
+		top: -1px;
 		left: 0;
 		right: 0;
 		bottom: -2px;
@@ -110,10 +111,12 @@ textarea,
 .m-input-placeholder {
 	position: absolute;
 	top: 0;
+	padding-top: 5px;
 	left: 4px;
 	right: 4px;
 	bottom: 1px;
 	color: rgba(white, 0.35);
+	font-weight: 500;
 	background: $blue;
 	white-space: nowrap;
 	overflow: hidden;
