--- a/_sass/base/typography.scss
+++ b/_sass/base/typography.scss
@@ -122,30 +122,28 @@ blockquote {
 
 @font-face {
     font-family: 'Charter';
-    src: url('/assets/fonts/charter_italic-webfont.eot');
-    src: url('/assets/fonts/charter_italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/assets/fonts/charter_italic-webfont.woff') format('woff');
+    src: url('/assets/fonts/charter_italic-webfont.woff') format('woff');
     font-weight: normal;
     font-style: italic;
 }
 @font-face {
     font-family: 'Charter';
-    src: url('/assets/fonts/charter_bold_italic-webfont.eot');
-    src: url('/assets/fonts/charter_bold_italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/assets/fonts/charter_bold_italic-webfont.woff') format('woff');
+    src: url('/assets/fonts/charter_bold_italic-webfont.woff') format('woff');
     font-weight: bold;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'gordita';
-    src: url('/assets/fonts/gordita-medium.woff2') format('woff2');
+    font-family: 'Gordita';
+    src: url('/assets/fonts/gordita-medium.woff2') format('woff2'),
+         url('/assets/fonts/gordita-medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
 }
 @font-face {
-    font-family: 'gordita';
-    src: url('/assets/fonts/gordita-bold.woff2') format('woff2');
+    font-family: 'Gordita';
+    src: url('/assets/fonts/gordita-bold.woff2') format('woff2'),
+         url('/assets/fonts/gordita-bold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
 }
