--- a/_sass/base/variables.scss
+++ b/_sass/base/variables.scss
@@ -27,7 +27,7 @@ $blue-inputUnderline--highlight: #C6E3FB;
 
 // Typography
 $font_body:         "Soleil", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica, Arial;
-$font_header:		"gordita", "Soleil", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica, Arial;;
+$font_header:		"Gordita", "Soleil", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica, Arial;;
 $font_serif:        "Charter", Georgia, serif;
 $font_size:         18px;
 $line_height:         1.5;
