update font files for Charter

--- a/_sass/base/typography.scss
+++ b/_sass/base/typography.scss
@@ -122,13 +122,15 @@ blockquote {
 
 @font-face {
     font-family: 'Charter';
-    src: url('/assets/fonts/charter_italic-webfont.woff') format('woff');
+    src: url('/assets/fonts/charter-italic.woff2') format('woff2'),
+         url('/assets/fonts/charter-italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
 }
 @font-face {
     font-family: 'Charter';
-    src: url('/assets/fonts/charter_bold_italic-webfont.woff') format('woff');
+    src: url('/assets/fonts/charter-bold-italic.woff2') format('woff2'),
+         url('/assets/fonts/charter-bold-italic.woff') format('woff');
     font-weight: bold;
     font-style: italic;
 }
