update CSS and remove Bloc from services page

--- a/_sass/base/typography.scss
+++ b/_sass/base/typography.scss
@@ -17,6 +17,7 @@ h4,
 	font-family: $font_header;
 	font-weight: bold;
 	text-rendering: optimizeLegibility;
+	letter-spacing: -0.01em;
 }
 h1,
 .h1 {
