add case study of surgemaker

--- a/_sass/base/variables.scss
+++ b/_sass/base/variables.scss
@@ -27,8 +27,8 @@ $blue-inputUnderline--highlight: #C6E3FB;
 
 // Typography
 $font_body:         "Soleil", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica, Arial;
-$font_header:		"Gordita", "Soleil", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica, Arial;;
-$font_serif:        "Charter", Georgia, serif;
+$font_header:		"Gordita-Web", "Gordita", "Soleil", "Roboto", "Segoe UI", "Helvetica Neue", Helvetica, Arial;;
+$font_serif:        "Charter-Web", "Charter", Georgia, serif;
 $font_size:         18px;
 $line_height:         1.5;
 $line_height--header: 1.1;
