--- a/_sass/base/typography.scss
+++ b/_sass/base/typography.scss
@@ -122,14 +122,14 @@ blockquote {
 }
 
 @font-face {
-    font-family: 'Charter';
+    font-family: 'Charter-Web';
     src: url('/assets/fonts/charter-italic.woff2') format('woff2'),
          url('/assets/fonts/charter-italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
 }
 @font-face {
-    font-family: 'Charter';
+    font-family: 'Charter-Web';
     src: url('/assets/fonts/charter-bold-italic.woff2') format('woff2'),
          url('/assets/fonts/charter-bold-italic.woff') format('woff');
     font-weight: bold;
@@ -137,14 +137,14 @@ blockquote {
 }
 
 @font-face {
-    font-family: 'Gordita';
+    font-family: 'Gordita-Web';
     src: url('/assets/fonts/gordita-medium.woff2') format('woff2'),
          url('/assets/fonts/gordita-medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
 }
 @font-face {
-    font-family: 'Gordita';
+    font-family: 'Gordita-Web';
     src: url('/assets/fonts/gordita-bold.woff2') format('woff2'),
          url('/assets/fonts/gordita-bold.woff') format('woff');
     font-weight: 600;
