--- a/_sass/components/defaults.scss
+++ b/_sass/components/defaults.scss
@@ -51,8 +51,7 @@ button {
 img,
 video {
 	display: block;
-	max-width: 100%;
-	max-height: 100%;
+	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 }
